# scanner

./: .gitignore  CONTRIBUTING.md  DESIGN-2026-Q2.md  DESIGN.md  IMPROVEMENTS.md  LAUNCH_CHECKLIST.md  LICENSE  README.md  RETEST-RESULTS.md  SECURITY.md  SKILLS.md  docker-compose.yml  glama.json  merge_results.py  render.yaml  rescan_all.py  scan_batch.py  scan_daemon.py  scan_services.py  smithery.yaml
.claude/skills/: clarvia-compare.md  clarvia-recommend.md  clarvia-scan.md
.github/workflows/: auto-deploy.yml  ci.yml  clarvia-score.yml  deploy-on-push.yml  marketing.yml  ops-monitor.yml
backend/: .env.example  Dockerfile  requirements.txt  run.sh  schema.sql
backend/app/: auth.py  config.py  keepalive.py  main.py  mcp_server.py  middleware.py  models.py  recommender.py  sarif.py  scanner.py  synonym_dict.py  tool_scorer.py
backend/data/: all-agent-tools.json  experiments.json  prebuilt-scans.json
backend/scripts/: batch_deep_scan.py  batch_seed_scan.py  recalculate_scores.py
backend/tests/: conftest.py  test_contract.py  test_data_integrity.py  test_e2e.py  test_e2e_extended.py  test_search_quality.py  test_security.py
clarvia-langchain/: LICENSE  README.md  pyproject.toml
clarvia-langchain/src/clarvia_langchain/: __init__.py  gate.py  middleware.py  models.py  tool.py
clarvia-langchain/tests/: test_gate.py
cli/: README.md  pyproject.toml
cli/clarvia_cli/: __init__.py  main.py  scanner.py
data/: 2026-03-24-persona-feedback-v2.md  2026-03-25-persona-feedback-v3.md  all-agent-tools.json  all-mcp-urls.json  badge-outreach.json  badge-prs.jsonl  competitive-analysis-2026-03-27.md  competitor-weekly.jsonl  crawl-report.json  discovery-log.jsonl  endpoint-monitor.jsonl  evening-digest-history.jsonl  github-mcp-repos.json  github-scan-results.json  github-scan-urls.json  glama-scan-results.json  glama-scan-urls.json  glama-servers.json  journey-log.md  last-sync-report.txt  marketing-attribution.jsonl  marketing-log.jsonl  marketing-overnight-results.md  marketing-strategy.md  mcp-scan-progress.json  mcp-scan-results.json  mcp-scan-urls.json  new-tools-queue.jsonl  ortus-launch-security-research.md  prebuilt-scans.json  profiles.json  realtime-sync-state.json  skills-cli-collected.json  user-testing-round2.md  user-testing-round3.md  user-testing-round4.md  user-testing-simulation.md  weekly-review-2026-03-31.md  weekly-review-2026-04-01.md
data/audits/: audit-2026-03-27.json  audit-2026-03-28.json  audit-2026-03-29.json  audit-2026-03-30.json
data/circuit_breaker/: state.json
data/classifier/: validation-2026-03-26.json
data/curated/: top50.json  top50.md
docs/: AGENT-MARKETING-DEEP-DESIGN.md  AGENT-MARKETING-OVERNIGHT.md  AUTOMATION-SYSTEM.md  CLARVIA-STRATEGY-V2.md  FOUNDER-ACTION-ITEMS.md  USER-ACQUISITION-STRATEGY.md  agent-marketing-strategy.md  audit-backend.md  audit-devops.md  audit-security.md  feedback-tier1.md  feedback-tier2.md  gtm-strategy.md  link-digest-20260325.md  production-audit.md  state-of-mcp-quality-2026.md
examples/: README.md  claude-code-skill.md
frontend/: .npmignore  Dockerfile  next.config.ts  package-lock.json  package.json  vercel.json
github-action/: README.md  action.yml  package-lock.json  package.json  scan.sh
mcp-server/: LICENSE  README.md  package-lock.json  package.json  server.json  smithery.yaml
scripts/: agent_marketing.py  auto_badge_pr.py  backup.py  badge_outreach.py  batch_popularity.py  batch_probe.py  batch_rescan.py  batch_score.py  catalog_updater.py  collect_all_agent_tools.py  collect_skills_cli.py  competitive_response.py  endpoint_monitor.py  enrich_existing.py  error_monitor.py  healthcheck.py  log_rotation.py  marketing_attribution.py  marketing_execute.py  mass_scan.py  merge_catalog.py  realtime_sync.py  recalibrate_ratings.py  reclassify_categories.py  scan_github_parallel.py  scan_glama_parallel.py  scan_mcp_parallel.py  scan_mcp_registry.py  setup_automation.sh  start_orchestrator.sh  stop_orchestrator.sh  submit_to_directories.sh  sync_mcp_registry.py  telegram_notifier.py  tier_promotion.py  track_prs.py  weekly_insight_report.py
submissions/: README.md  SUBMIT_YOUR_TOOL.md  awesome-mcp-appcypher.md  awesome-mcp-wong2.md  cursor-directory.json  lobehub-manifest.json  windsurf-plugin.json
tests/: QA-TEST-RESULTS-2026-04-01.md  chaos_test.py  chrome-e2e-scenarios.md
(+246 files in other folders)
