[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarvia-langchain"
version = "0.1.0"
description = "LangChain integration for Clarvia AEO scoring - gate external API calls based on agent-friendliness"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "digitamaz", email = "dev@clarvia.com" },
]
maintainers = [
    { name = "digitamaz", email = "dev@clarvia.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain-core>=0.2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://clarvia.com"
Repository = "https://github.com/clarvia/clarvia-langchain"

[tool.hatch.build.targets.wheel]
packages = ["src/clarvia_langchain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
