[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarvia-langchain"
version = "0.2.0"
description = "LangChain integration for Clarvia AEO scoring — gate external API calls based on agent-friendliness. Works with LangChain, CrewAI, AutoGen, and any Python agent framework."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "digitamaz", email = "dev@clarvia.com" },
]
maintainers = [
    { name = "digitamaz", email = "dev@clarvia.com" },
]
keywords = [
    "langchain",
    "aeo",
    "mcp",
    "agent",
    "ai",
    "tool-quality",
    "crewai",
    "autogen",
    "agent-experience-optimization",
    "mcp-server",
    "api-scoring",
    "tool-discovery",
    "clarvia",
    "llm-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://clarvia.art"
Documentation = "https://clarvia.art/docs"
Repository = "https://github.com/clarvia/clarvia-langchain"
Changelog = "https://github.com/clarvia/clarvia-langchain/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/clarvia_langchain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
