[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clarvia-cli"
version = "1.0.0"
description = "Clarvia AEO Scanner CLI - Check API readiness for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Clarvia", email = "hello@clarvia.art"},
]
keywords = ["aeo", "api", "scanner", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

# Zero external dependencies — uses only stdlib
dependencies = []

[project.scripts]
clarvia = "clarvia_cli.main:main"

[project.urls]
Homepage = "https://clarvia.art"
Repository = "https://github.com/clarvia/scanner"
